2008-11-11  Cameron Zwarich  <zwarich@apple.com>

        Rubber-stamped by Sam Weinig.

        Bug 22179: Move EvalCodeCache from CodeBlock.h into its own file
        <https://bugs.webkit.org/show_bug.cgi?id=22179>

        * GNUmakefile.am:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * VM/CodeBlock.h:
        * VM/EvalCodeCache.h: Copied from VM/CodeBlock.h.
        * VM/Machine.cpp:

2008-11-11  Cameron Zwarich  <zwarich@apple.com>

        Reviewed by Sam Weinig.

        Remove the 'm_' prefix from the fields of the SwitchRecord struct.

        * VM/CTI.cpp:
        (JSC::CTI::privateCompile):
        * VM/CTI.h:
        (JSC::SwitchRecord):
        (JSC::SwitchRecord::SwitchRecord):

2008-11-11  Cameron Zwarich  <zwarich@apple.com>

        Rubber-stamped by Sam Weinig.

        Make asInteger() a static function so that it has internal linkage.

        * VM/CTI.cpp:
        (JSC::asInteger):

2008-11-11  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Mark Rowe.
        
        - shrink CodeBlock and AST related Vectors to exact fit (5-10M savings on membuster test)
        
        No perf regression combined with the last patch (each seems like a small regression individually)

        * bytecompiler/CodeGenerator.cpp:
        (JSC::CodeGenerator::generate):
        * parser/Nodes.h:
        (JSC::SourceElements::releaseContentsIntoVector):
        * wtf/Vector.h:
        (WTF::Vector::shrinkToFit):

2008-11-11  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Mark Rowe.
        
        - remove inline capacity from declaration stacks (15M savings on membuster test)

        No perf regression on SunSpider or V8 test combined with other upcoming memory improvement patch.
        
        * JavaScriptCore.exp:
        * parser/Nodes.h:

2008-11-11  Cameron Zwarich  <zwarich@apple.com>

        Reviewed by Oliver Hunt.
